<resources>
    <string name="app_name">Waiter</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Password</string>
    <string name="action_sign_in" translatable="false">Sign in or register</string>
    <string name="action_sign_in_short" translatable="false">Sign in</string>
    <string name="welcome" translatable="false">"Welcome !"</string>
    <string name="invalid_username" translatable="false">Not a valid username</string>
    <string name="invalid_password" translatable="false">Password must be >5 characters</string>
    <string name="login_failed" translatable="false">"Login failed"</string>
    <string name="ten_dang_nhap" translatable="false">Tên đăng nhập</string>
    <string name="mat_khau" translatable="false">Mật khẩu</string>
    <string name="dang_nhap" translatable="false">Đăng nhập</string>
    //tab name
    <string name="name_tab_1" translatable="false">Activity</string>
    <string name="name_tab_2">Map</string>
    <string name="name_tab_3">Statistic</string>
    <string name="name_tab_4">Notification</string>
    <string name="name_tab_5">Account</string>
    <string name="xac_nhan" translatable="false">Xác nhận</string>
    <string name="serving_tab" translatable="false">Hiện tại</string>
    <string name="title_map" translatable="false">Sơ đồ</string>
    <string name="title_statistic" translatable="false">Thống kê</string>
    <string name="title_noti" translatable="false">Thông báo</string>
    <string name="title_taikhoan" translatable="false">Tài khoản</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_info">Thông tin cá nhân</string>
    <string name="log_out">Đăng xuất</string>
    <string name="label_account">Tài khoản</string>
    <string name="default_label_user">Admin</string>
    <string name="text_empty_table">Còn trống</string>
    <string name="username_hint">Tên đăng nhập</string>
    <string name="hint_matkhau">Mật khẩu</string>
</resources>