<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/serving"
        android:icon="@drawable/ic_serving_normal"
        android:title="@string/serving_tab" />

    <item
        android:id="@+id/map"
        android:icon="@drawable/ic_map_normal"
        android:title="@string/title_map" />

    <item
        android:id="@+id/statistic"
        android:icon="@drawable/ic_statistic_normal"
        android:title="@string/title_statistic" />

    <item
        android:id="@+id/noti"
        android:icon="@drawable/ic_notification_normal"
        android:title="@string/title_noti" />
    <item
        android:id="@+id/account"
        android:icon="@drawable/ic_account_normal"
        android:title="@string/title_taikhoan" />
</menu>